# prism-analyst-services

./: .env.example  .gitignore  AGENTS.md  DECISIONS.md  Dockerfile  README.md  _check3.py  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 20260517_0001_initial_schema.py  20260517_0002_seed_nse_top10.py  20260517_0003_agent_runs.py  20260518_0004_filings_and_chunks.py  20260518_0005_bmc_tables.py  20260518_0006_bmc_contradictions.py  20260523_0007_firm_integrations.py  20260524_0008_drop_bmc_legacy_tables.py  20260524_0009_drop_companies_and_filings.py  20260531_0010_portfolio_backtests.py  20260531_0011_portfolio_persistence.py  20260605_0012_auth_foundation.py  20260605_0013_agent_runs_hidden_at.py  20260605_0014_chat_conversations.py  20260606_0015_agent_runs_client_key.py  20260612_0016_agent_runs_result_payload.py  20260614_0017_chat_pin_archive.py  20260614_0018_message_feedback.py  20260615_0019_chat_share.py
config/: access_policy.yml  balance_sheet_hierarchy.json  income_statement_structure.json  ingestion_sources.yml  integrations.yml  rate_limits.yml
docs/: CATALOG_DB_INDEXES.md  INTEGRATION_INTAKE.md  SECRETS_MIGRATION.md
evals/: README.md  run.py
scripts/: __init__.py  ingest_filings.py  migrate_all_dbs.py  setup_company_aliases.py
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  base.py  company_intel.py  web_search.py
src/agents/bmc/: __init__.py  block_agent.py  block_chat.py  blocks.py  reconciler.py
src/auth/: __init__.py  policy.py  principal.py  provisioning.py  verifier.py
src/core/: __init__.py  agent_context.py  auth.py  catalog_database.py  database.py  investment_database.py  sebi_database.py
src/integrations/: __init__.py  adapters.py  firm_state.py  registry.py  schema.py
src/integrations/tools/: __init__.py  _errors.py  bmc.py  prism_financials.py  prism_news.py  sebi_regulatory.py  stock_chat.py
src/models/: __init__.py  agent_run.py  base.py  billing.py  bmc.py  chat_conversation.py  company.py  filing.py  firm.py  integration.py  message_feedback.py  portfolio.py  user.py  user_preferences.py
src/models/catalog/: __init__.py  company_alias.py  company_industry.py
src/models/investment/: __init__.py  annual_data.py  index_tables.py  master_security.py  price_row.py
src/portfolio/: __init__.py  backtest.py  backtest_data.py  calendar.py  constants.py  job_repo.py  lag.py  metrics.py  repository.py  screening.py  serialize.py  service.py  store.py  weighting.py  worker.py
src/portfolio/factors/: __init__.py  compute.py  custom.py  expression.py  price_stats.py  registry.py
src/repositories/: __init__.py  bmc_repo.py  company_repo.py  conversation_repo.py  filing_repo.py  integration_repo.py  preferences_repo.py  sebi_repo.py  stock_repo.py  usage_repo.py
src/routers/: __init__.py  bmc.py  chat.py  companies.py  filings.py  integrations.py  me.py  news.py  portfolio.py  regulatory.py  router_health.py  stocks.py
src/schemas/: __init__.py  bmc.py  chat.py  common.py  company.py  filings.py  me.py  portfolio.py  regulatory.py  stock.py
src/services/: __init__.py  agent_runner.py  company_resolver.py  deep_dive.py  model_router.py  model_router_config.py  rate_limit.py
src/services/bmc/: __init__.py  agent_exec.py  exporter.py  generator.py
src/services/embedding/: __init__.py  embedder.py
src/services/ingestion/: __init__.py  chunker.py  fetcher.py  pipeline.py  registry.py
src/services/ingestion/parser/: __init__.py  base.py  docling_parser.py  factory.py  pdfplumber_parser.py
src/services/nre/: __init__.py  engine.py
src/services/retrieval/: __init__.py  hybrid.py
src/services/storage/: __init__.py  base.py  fsspec_store.py
src/tools/: __init__.py  bmc_tools.py  clarify_tool.py  company_tools.py  filing_tools.py  nre_tools.py  plan_tool.py
tests/: conftest.py  test_access_policy.py  test_agent_prompts.py  test_agent_runner.py  test_agent_runner_rehydrate.py  test_bmc_generator.py  test_bmc_router.py  test_chat_agent_integration.py  test_chat_router.py  test_chunker.py  test_clarify_tool.py  test_companies.py  test_company_repo.py  test_company_resolver.py  test_company_tools.py  test_conversation_pin_archive.py  test_conversation_search.py  test_conversation_share.py  test_deep_dive.py  test_fetcher.py  test_filing_repo.py  test_filings_registry.py  test_health.py  test_ingestion_service.py  test_integrations.py  test_me.py  test_message_feedback.py  test_model_router.py  test_nre.py  test_parser.py  test_portfolio_backtest.py  test_portfolio_custom.py  test_portfolio_lag.py  test_portfolio_price_stats.py  test_portfolio_screening.py  test_portfolio_serialize.py  test_prism_financials.py  test_prism_news.py  test_provisioning.py  test_retrieval_rrf.py  (+5 more)
