[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-analyst-services"
version = "0.1.0"
description = "PRISM — AI-powered equity research platform backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.14.0",
    "greenlet>=3.1.0",
    "python-dotenv>=1.0.0",
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",
    "sse-starlette>=2.1.0",
    # NOTE: pin ≥1.83.0 — versions 1.82.7 and 1.82.8 had a PyPI supply-chain
    # compromise (March 2026). Do not regress this floor without security review.
    "litellm>=1.83.0",
    # Slice 5 — RAG foundation:
    # * pgvector — SQLAlchemy ``Vector`` column type for embeddings
    # * fsspec  — filesystem abstraction (local ↔ S3 with the same code path)
    # * pyyaml  — declarative ingestion source registry
    # * numpy   — embedding math (RRF fusion, similarity ops)
    "pgvector>=0.3.6",
    "fsspec>=2025.0.0",
    "pyyaml>=6.0.2",
    "numpy>=2.0.0",
    # Slice 5B — parsing + chunking:
    # * pdfplumber — lightweight pure-Python PDF text extraction (default parser).
    #                The heavy docling parser runs in a Docker sidecar, so its
    #                deps are NOT listed here — the backend only needs an HTTP client.
    # * tiktoken   — token counting for chunk sizing (model-agnostic BPE estimate).
    "pdfplumber>=0.11.4",
    "tiktoken>=0.8.0",
    # Phase 3 BMC export — pure-Python, no system deps:
    # * openpyxl — XLSX workbooks (canvas + audit sheets)
    # * fpdf2    — PDF generation (no Pandoc/LaTeX system dependency)
    "openpyxl>=3.1.5",
    "fpdf2>=2.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "anyio>=4.6.0",
]

# ── Package discovery ──
# ``src`` is itself the top-level importable package (``src/__init__.py``
# exists and code imports ``from src.xxx``). Without this, setuptools'
# auto-discovery is ambiguous given the flat layout (src/ tests/ alembic/
# config/ all at root) and ``pip install -e .`` won't expose ``src``.
[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
# Add the project root to sys.path so ``from src.xxx`` resolves during tests
# even without an editable install. Belt-and-suspenders alongside the
# setuptools package config above.
pythonpath = ["."]
